Revert "编码规范整改"
This reverts commit 6af5e45190dd336ea73d4ec3ed4df52b5738135f.